# CppStaticLibTemplate

./: .clang-tidy  CMakeLists.txt  README.md  cppcheck.supp  gcovr.cfg
.github/coverage/: action.yml
.github/tag/: action.yml
.github/template/: README.md
.github/workflows/: autotag.yml  ci.yml  cmake-multi-platform.yml  release.yml  template-janitor.yml
data/code-coverage/: coverage.xml
data/code-coverage/coverage-ubuntu-latest-clang++/: coverage.xml
data/code-coverage/coverage-ubuntu-latest-g++-14/: coverage.xml
data/code-coverage/coverage-windows-latest-cl/: coverage.xml
data/fuzz-tests/coverage-ubuntu-latest-clang++/: coverage.xml
data/fuzz-tests/coverage-ubuntu-latest-g++-14/: coverage.xml
data/fuzz-tests/coverage-windows-latest-cl/: coverage.xml
data/main/coverage-ubuntu-latest-clang++/: coverage.xml
data/main/coverage-ubuntu-latest-g++-14/: coverage.xml
data/main/coverage-windows-latest-cl/: coverage.xml
data/package-project/coverage-ubuntu-latest-clang++/: coverage.xml
data/package-project/coverage-ubuntu-latest-g++-14/: coverage.xml
data/package-project/coverage-windows-latest-cl/: coverage.xml
data/refactor-ci/coverage-ubuntu-latest-clang++/: coverage.xml
data/refactor-ci/coverage-ubuntu-latest-g++-14/: coverage.xml
data/refactor-ci/coverage-windows-latest-cl/: coverage.xml
doc/: Doxyfile.in
fuzz_test/: CMakeLists.txt
fuzz_test/src/: CppStaticLib_test.cpp
include/CppStaticLib/: CppStaticLib.hpp
src/: CppStaticLib.cpp
test/: CMakeLists.txt
test/source/: CppStaticLib.cpp
test/src/: CppStaticLib_test.cpp
